--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.23)
 project(HullProject)
 
+if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    set(MACOSX TRUE)
+endif()
+
 set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include)
@@ -10,7 +14,9 @@ add_executable(HullProject main.cpp src/Hull.cpp include/Hull.h)
 
 INCLUDE(FindPkgConfig)
 
-set(SDL2_LIB "/Library/Frameworks/SDL2.framework/SDL2")
-target_include_directories(HullProject PRIVATE "/Library/Frameworks/SDL2.framework/Headers")
+if(MACOSX)
+    set(SDL2_LIB "/Library/Frameworks/SDL2.framework/SDL2")
+    target_include_directories(HullProject PRIVATE "/Library/Frameworks/SDL2.framework/Headers")
 
-target_link_libraries(HullProject ${SDL2_LIB})
+    target_link_libraries(HullProject ${SDL2_LIB})
+endif()
